add meter visualisation and project deps